--- a/.github/workflows/build-round-cursor.yml
+++ b/.github/workflows/build-round-cursor.yml
@@ -16,37 +16,46 @@ jobs:
         shell: powershell
 
     steps:
+      # --- Step 1: Checkout code ---
       - name: Checkout repository
         uses: actions/checkout@v4
 
+      # --- Step 2: Setup MSBuild ---
       - name: Setup MSBuild
         uses: microsoft/setup-msbuild@v1
 
+      # --- Step 3: Setup NuGet ---
       - name: Setup NuGet
         uses: NuGet/setup-nuget@v1
 
-      # --- Auto retarget Windows SDK to latest installed version ---
+      # --- Step 4: Auto-retarget Windows SDK to latest installed version ---
       - name: Retarget Windows SDK in all projects
         run: |
-          # Find all installed Windows SDK versions
+          Write-Host "Detecting installed Windows SDK versions..."
           $sdks = Get-ChildItem "C:\Program Files (x86)\Windows Kits\10\Lib" | Where-Object { $_.PSIsContainer } | Select-Object -ExpandProperty Name
+          if (-not $sdks) {
+              Write-Host "No Windows SDK found, installing latest..."
+              choco install windows-sdk-10-version-19041-all -y
+              $sdks = Get-ChildItem "C:\Program Files (x86)\Windows Kits\10\Lib" | Where-Object { $_.PSIsContainer } | Select-Object -ExpandProperty Name
+          }
           $latestSdk = ($sdks | Sort-Object -Descending | Select-Object -First 1)
           Write-Host "Latest Windows SDK found: $latestSdk"
-
-          # Update all .vcxproj files
+          
           Get-ChildItem -Recurse -Filter *.vcxproj | ForEach-Object {
               (Get-Content $_.FullName) -replace '<WindowsTargetPlatformVersion>.*?</WindowsTargetPlatformVersion>', "<WindowsTargetPlatformVersion>$latestSdk</WindowsTargetPlatformVersion>" | Set-Content $_.FullName
           }
 
+      # --- Step 5: Restore NuGet packages ---
       - name: Restore NuGet packages
         run: msbuild OpenConsole.slnx /t:Restore /p:Configuration=Release /p:Platform=x64
 
+      # --- Step 6: Build Terminal ---
       - name: Build Terminal
         run: msbuild OpenConsole.slnx /p:Configuration=Release /p:Platform=x64 /m
 
+      # --- Step 7: Upload built artifacts ---
       - name: Upload artifacts
         uses: actions/upload-artifact@v4
         with:
           name: Terminal-MSIX
-          path: |
-            src\cascadia\CascadiaPackage\bin\x64\Release\
+          path: src\cascadia\CascadiaPackage\bin\x64\Release\
