--- a/.github/workflows/build-round-cursor.yml
+++ b/.github/workflows/build-round-cursor.yml
@@ -16,38 +16,43 @@ jobs:
         shell: powershell
 
     steps:
+      # 1️⃣ Checkout repository
       - name: Checkout repository
         uses: actions/checkout@v4
 
+      # 2️⃣ Setup MSBuild & NuGet
       - name: Setup MSBuild
         uses: microsoft/setup-msbuild@v1
 
       - name: Setup NuGet
         uses: NuGet/setup-nuget@v1
 
-      # --- Restore NuGet packages explicitly ---
+      # 3️⃣ Restore NuGet packages explicitly
       - name: Restore NuGet packages
         run: |
           nuget restore OpenConsole.slnx -PackagesDirectory packages
           msbuild OpenConsole.slnx /t:Restore /p:Configuration=Release /p:Platform=x64
 
-      # --- Retarget all .vcxproj to latest Windows SDK installed ---
+      # 4️⃣ Bootstrap vcpkg (needed for native libs)
+      - name: Bootstrap vcpkg
+        run: .\vcpkg\bootstrap-vcpkg.bat
+
+      # 5️⃣ Retarget all .vcxproj to latest Windows SDK installed
       - name: Retarget Windows SDK
         run: |
           Write-Host "Finding latest installed Windows SDK..."
           $sdks = Get-ChildItem "C:\Program Files (x86)\Windows Kits\10\Lib" | Where-Object { $_.PSIsContainer } | Select-Object -ExpandProperty Name
           $latestSdk = ($sdks | Sort-Object -Descending | Select-Object -First 1)
           Write-Host "Latest Windows SDK found: $latestSdk"
-
           Get-ChildItem -Recurse -Filter *.vcxproj | ForEach-Object {
               (Get-Content $_.FullName) -replace '<WindowsTargetPlatformVersion>.*?</WindowsTargetPlatformVersion>', "<WindowsTargetPlatformVersion>$latestSdk</WindowsTargetPlatformVersion>" | Set-Content $_.FullName
           }
 
-      # --- Build solution ---
+      # 6️⃣ Build solution (skip UIA tests to avoid missing Microsoft.Taef)
       - name: Build Terminal
-        run: msbuild OpenConsole.slnx /p:Configuration=Release /p:Platform=x64 /m
+        run: msbuild OpenConsole.slnx /p:Configuration=Release /p:Platform=x64 /m /p:ExcludeProjects="WindowsTerminal.UIA.Tests"
 
-      # --- Upload artifacts ---
+      # 7️⃣ Upload artifacts
       - name: Upload artifacts
         uses: actions/upload-artifact@v4
         with:
