--- a/.github/workflows/build-round-cursor.yml
+++ b/.github/workflows/build-round-cursor.yml
@@ -1,4 +1,4 @@
-name: Build Microsoft Terminal (round-cursor)
+name: Build Microsoft Terminal (optimized)
 
 on:
   push:
@@ -16,53 +16,78 @@ jobs:
         shell: powershell
 
     steps:
-      # --- Checkout repository ---
+      # --- 1. Checkout repository ---
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      # --- Setup MSBuild ---
+      # --- 2. Setup MSBuild ---
       - name: Setup MSBuild
         uses: microsoft/setup-msbuild@v1
 
-      # --- Setup NuGet ---
+      # --- 3. Setup NuGet ---
       - name: Setup NuGet
         uses: NuGet/setup-nuget@v1
 
-      # --- Restore NuGet packages ---
+      # --- 4. Cache NuGet packages ---
+      - name: Cache NuGet packages
+        uses: actions/cache@v3
+        with:
+          path: |
+            ~/.nuget/packages
+            packages
+          key: nuget-${{ hashFiles('**/*.slnx') }}-${{ hashFiles('**/*.csproj') }}
+          restore-keys: |
+            nuget-
+
+      # --- 5. Restore NuGet packages ---
       - name: Restore NuGet packages
         run: |
           nuget restore OpenConsole.slnx -PackagesDirectory packages
           msbuild OpenConsole.slnx /t:Restore /p:Configuration=Release /p:Platform=x64
 
-      # --- Clone vcpkg ---
-      - name: Clone vcpkg
-        run: |
-          git clone https://github.com/microsoft/vcpkg.git vcpkg
+      # --- 6. Cache vcpkg artifacts ---
+      - name: Cache vcpkg
+        uses: actions/cache@v3
+        with:
+          path: |
+            vcpkg/installed
+            vcpkg/packages
+            vcpkg/buildtrees
+          key: vcpkg-${{ hashFiles('vcpkg.json') }}
 
-      # --- Bootstrap vcpkg ---
+      # --- 7. Clone vcpkg ---
+      - name: Clone vcpkg
+        if: steps.cache-vcpkg.outputs.cache-hit != 'true'
+        run: git clone https://github.com/microsoft/vcpkg.git vcpkg
+
+      # --- 8. Bootstrap vcpkg ---
       - name: Bootstrap vcpkg
         run: |
           .\vcpkg\bootstrap-vcpkg.bat
           .\vcpkg\vcpkg integrate install
-          .\vcpkg\vcpkg install
 
-      # --- Retarget Windows SDK ---
+      # --- 9. Install vcpkg dependencies (optional) ---
+      # Only if you need extra C++ libraries via vcpkg
+      - name: Install vcpkg dependencies
+        run: |
+          .\vcpkg\vcpkg install fmt:x64-windows
+          .\vcpkg\vcpkg install some-other-lib:x64-windows
+
+      # --- 10. Retarget Windows SDK to latest version ---
       - name: Retarget Windows SDK
         run: |
-          Write-Host "Finding latest installed Windows SDK..."
           $sdks = Get-ChildItem "C:\Program Files (x86)\Windows Kits\10\Lib" | Where-Object { $_.PSIsContainer } | Select-Object -ExpandProperty Name
           $latestSdk = ($sdks | Sort-Object -Descending | Select-Object -First 1)
-          Write-Host "Latest Windows SDK found: $latestSdk"
           Get-ChildItem -Recurse -Filter *.vcxproj | ForEach-Object {
               (Get-Content $_.FullName) -replace '<WindowsTargetPlatformVersion>.*?</WindowsTargetPlatformVersion>', "<WindowsTargetPlatformVersion>$latestSdk</WindowsTargetPlatformVersion>" | Set-Content $_.FullName
           }
 
-      # --- Build Microsoft Terminal ---
+      # --- 11. Build Microsoft Terminal ---
       - name: Build Terminal
         run: msbuild OpenConsole.slnx /p:Configuration=Release /p:Platform=x64 /m
 
-      # --- Upload build artifacts ---
-      - name: Upload artifacts
+      # --- 12. Upload artifacts ---
+      - name: Upload build artifacts
         uses: actions/upload-artifact@v4
         with:
           name: Terminal-MSIX
