Introduce SearchMetadata and navigation by name - SearchMetadata is unsused, but it is designed to hold information    so that we can navigate to a setting - Updated all pages to...    - have an x:Name on relevant setting containers    - have a NavigateToXArgs used in the OnNavigatedTo() function    - update the NavigateToXArgs to include the name of an element       to scroll down to    - Add BringIntoViewWhenLoaded() to HasScrollViewer<T> which       scrolls down to the element with a given name These components aren't fully hooked up together yet and there's a few TODO CARLOS's throughout. Main upcoming work: - indexing - runtime indexing - search box UI - search results UI based on https://github.com/microsoft/PowerToys/blob/079c69b8beced55211485c352f41308426930e47/doc/specs/settings-search.md

--- a/src/cascadia/TerminalSettingsEditor/Microsoft.Terminal.Settings.Editor.vcxproj
+++ b/src/cascadia/TerminalSettingsEditor/Microsoft.Terminal.Settings.Editor.vcxproj
@@ -157,6 +157,9 @@
     <ClInclude Include="Rendering.h">
       <DependentUpon>Rendering.xaml</DependentUpon>
     </ClInclude>
+    <ClInclude Include="SearchMetadata.h">
+      <DependentUpon>SearchMetadata.idl</DependentUpon>
+    </ClInclude>
     <ClInclude Include="SettingContainer.h">
       <DependentUpon>SettingContainer.idl</DependentUpon>
     </ClInclude>
@@ -349,6 +352,10 @@
     <ClCompile Include="Rendering.cpp">
       <DependentUpon>Rendering.xaml</DependentUpon>
     </ClCompile>
+    <ClCompile Include="SearchMetadata.cpp">
+      <DependentUpon>SearchMetadata.idl</DependentUpon>
+      <SubType>Code</SubType>
+    </ClCompile>
     <ClCompile Include="SettingContainer.cpp">
       <DependentUpon>SettingContainer.idl</DependentUpon>
     </ClCompile>
@@ -447,6 +454,9 @@
     </Midl>
     <Midl Include="Appearances.idl">
       <DependentUpon>Appearances.xaml</DependentUpon>
+      <SubType>Code</SubType>
+    </Midl>
+    <Midl Include="SearchMetadata.idl">
       <SubType>Code</SubType>
     </Midl>
     <Midl Include="SettingContainer.idl">
