--- a/src/cascadia/UIHelpers/UIHelpers.vcxproj
+++ b/src/cascadia/UIHelpers/UIHelpers.vcxproj
@@ -86,4 +86,5 @@
   <Import Project="$(OpenConsoleDir)src\cppwinrt.build.post.props" />
   <!-- This -must- go after cppwinrt.build.post.props because that includes many VS-provided props including appcontainer.common.props, which stomps on what cppwinrt.targets did. -->
   <Import Project="$(OpenConsoleDir)src\common.nugetversions.targets" />
+  <Import Project="$(OpenConsoleDir)build\rules\CollectWildcardResources.targets" />
 </Project>
