Update bot to replace Area-AtlasEngine w/ Area-Rendering

--- a/.github/policies/resourceManagement.yml
+++ b/.github/policies/resourceManagement.yml
@@ -89,6 +89,19 @@ configuration:
           label: No-Recent-Activity
       - addReply:
           reply: This pull request has been automatically marked as stale because it has been marked as requiring author feedback but has not had any activity for **7 days**. It will be closed if no further activity occurs **within 7 days of this comment**.
+    - description: Replace "Area-AtlasEngine" label with "Area-Rendering"
+      frequencies:
+      - hourly:
+          hour: 3
+      filters:
+      - isIssue
+      - hasLabel:
+          label: Area-AtlasEngine
+      actions:
+      - removeLabel:
+          label: Area-AtlasEngine
+      - addLabel:
+          label: Area-Rendering
     eventResponderTasks:
     - description: Add "Needs-Triage" to new issues
       if:
